---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-01-30
  Bugfixes:
    - Fix that trains might jump around when interacted with when trains are moved from their original position.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-01-29
  Bugfixes:
    - Fix that train interrupts weren't properly saved and handled.
    - Fix that some 2.0 curved-rail previews were in the wrong position, not allowing you to use tools and shortcuts on them.
    - Fix that extraneous item request icons may appear on locomotives and other entities in some cases.
  Changes:
    - Trains pasted in projects are now _not_ set to automatic on paste.
    - Trains are now always present in only 1 stage, like in a version of this mod a while ago. It's possible to move trains to other stages without crying!
    - "Flexible offshore pump placement" is removed, as you can now always place them anywhere in editor mode.
    - Project surfaces now always have "ignore surface conditions" enabled, allowing you to place anything from any planet in Space Age.
    - "Sync map gen settings" now also syncs the "Use global electric network" setting.
  Other:
    - I like trains
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2025-01-07
  Bugfixes:
    - Fixed multiple issues related to 2.0 rails and elevated rails.
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2024-12-15
  Bugfixes:
    - Fixed handling of entities of different qualities (2.0).
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-12-07