@@ -22,14 +22,14 @@ bph00:stage-reference=Reference to a stage. Will be replaced with the actual blu
 bp100_utility=Staged bp planning: utility entities
 
 [mod-setting-name]
-bp100_flexible-offshore-pump-placement=Allow placing offshore pumps anywhere
 bp100_entity-info-location=Location of Entity info gui
 bp100_gps-tag-teleport=Teleport to stage when clicking a GPS tag
 bp100_unhide-infinity-items=Unhide infinity items (allows use in upgrade planner)
+bp100_delete-at-next-stage=Deconstruct at next stage
 
 [mod-setting-description]
-bp100_flexible-offshore-pump-placement=Pumps still need to be place on top of a fluid tile, to determine what fluid they pump.
 bp100_unhide-infinity-items=Unhide infinity chests and pipes. This allows using them in upgrade planners.
+bp100_delete-at-next-stage=When stage-deconstructing an entity, it will be deconstructed at the _next_ stage instead of the current stage.
 
 [string-mod-setting]
 bp100_entity-info-location-top=Top
