@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022-2023 GlassBricks
+ * Copyright (c) 2022-2025 GlassBricks
  * This file is part of Staged Blueprint Planning.
  *
  * Staged Blueprint Planning is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
@@ -30,6 +30,13 @@ data.extend<StringSettingDefinition | BoolSettingDefinition>([
     setting_type: "runtime-per-user",
     default_value: true,
     order: "c",
+  },
+  {
+    name: Settings.DeleteAtNextStage,
+    type: "bool-setting",
+    setting_type: "runtime-per-user",
+    default_value: true,
+    order: "d",
   },
   {
     name: Settings.UnhideInfinityItems,
